# COMP-4981_Assignment3_String-Compression-Written-in-C

./: CMakeLists.txt  OUTPUT.TEST  a.out  bit_handling.c  compress-lzw  compress-lzw.c  compress-rle.c  decompress-huffman.c  decompress-lzw  decompress-lzw.c  decompress-rle.c  encode-LZW.c  file_handler.h  huffman-compress.c  huffman-decompress.c  hufftest.c  hufmanTree.h  input.txt  input_handler.c  input_handler.h  something.txt
archived_files/: compress-lzw.c
archived_files/huffmann/: compress-huffman.c  test  tyz.h
archived_files/huffmann/Geeks/: a.out
archived_files/huffmann/same_program/: hufmanTree.c
bit_array_lib/BCIT_datacomm_C_language_data_structures-main/lib/: CMakeLists.txt
experiments/: CMakeLists.txt  bit_array.c  bit_array_test.txt  bit_test.txt  compress-lzw  compress-lzw.c  compressed.txt  decompress-lzw  decompress-lzw.c  decompressed.txt  dekomp  dekompress-lzw.c  file_handler.c  huffman-compress  huffman-compress.c  huffman-decompress.c  huffman_compressed.txt  hufmanTree.h  huftest.txt  input.txt  input1.txt  input_handler.h  komp  kompress-lwz2.c  outputtest.txt
experiments/bit_array_lib/BCIT_datacomm_C_language_data_structures-main/lib/: test.c
huffmann/: a.out  hufmanTree.c
huffmann/Geeks/: huffman_encoder.c
huffmann/same_program/: a.out  hufmanTree.c  hufmanTree.h  tyz.h
